--- a/new-site/mkdocs.yml
+++ b/new-site/mkdocs.yml
@@ -57,7 +57,7 @@ theme:
     repo: fontawesome/brands/github
 
   favicon: assets/favicon.ico
-  
+
   font:
     text: Inter
     code: Fira Code
@@ -168,7 +168,11 @@ nav:
     - Patents & Publications: experience/achievements.md
   - Blog:
     - blog/index.md
-  - Code Samples: https://gist.github.com/mutaku/81a6cf00717462686734d5ef9454a2e9
+  - Technical Writing:
+    - Python Deep Dives: blog/posts/python-generators-and-comprehensions.md
+    - Data Engineering: blog/posts/nested-dictionary-lookups.md
+    - MLOps Analysis: blog/posts/mlops-industry-analysis.md
+  - Projects: projects.md
 
 # Watch additional files (commented out since includes directory doesn't exist yet)
 # watch:
