--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,6 +76,11 @@ plugins:
         kwds:
           case: lower
       post_slugify_separator: _
+      post_excerpt: optional
+      post_excerpt_max_authors: 2
+      post_excerpt_max_categories: 3
+      post_excerpt_separator: <!-- more -->
+      pagination_per_page: 5
       categories_allowed:
         - AI/ML
         - Data Science
